--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-font": "^1.2.1",
+    "react-particle-animation": "^2.0.2",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
